feat(quiz): added category optional field on question
